<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/email"
        android:layout_width="294dp"
        android:layout_height="60dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/insertEmail"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="294dp"
        android:layout_height="60dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/insertPassword"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="294dp"
        android:layout_height="60dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="#015D87"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_marginTop="104dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="76dp"
            android:layout_weight="1"
            android:background="#015D87"
            android:text="@string/login"
            android:textSize="24sp"
            app:backgroundTint="#015D87" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="76dp"
            android:layout_weight="1"
            android:background="#015D87"
            android:text="@string/sign"
            android:textSize="24sp"
            app:backgroundTint="#015D87" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>